# privacy-profiler

./: .gitignore  README.md  pyproject.toml
data-input/: config.yaml  mixed_data.csv  sample_data.parquet  sample_data.xlsx  skewed_data.csv  uniform_data.csv
src/privacy_profiler/: main.py
src/privacy_profiler/interface/: __init__.py  rootview.py
src/privacy_profiler/interpreter/: interpretation_engine.py
src/privacy_profiler/metrics/: __init__.py  base_metric.py  gini.py  privacy_assessment_runner.py  row_risk_assessor.py  uniqueness_ratio.py
src/privacy_profiler/metrics/column/: __init__.py  null_ratio.py  shannon_entropy.py
src/privacy_profiler/metrics/row/: __init__.py  k_anonymity.py  l_diversity.py  mdl_metric.py  multi_column_metric.py  mutual_information.py  t_closeness.py
src/privacy_profiler/model/: __init__.py  model.py
src/privacy_profiler/presenter/: __init__.py  presenter.py
src/privacy_profiler/profiler/: __init__.py  column_profile.py  row_profile.py
src/privacy_profiler/reporting/: report_builder.py
src/privacy_profiler/utilities/: yaml_config_loader.py
tests/metrics/: test_gini.py  test_null_ratio.py  test_shannon_entropy.py  test_uniqueness_ratio.py
